main-entry.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-entry
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - www.cheatcodesam.com
    - cheatcodesam.com
    - matrix.cheatcodesam.com
    secretName: quickstart-example-tls
  rules:
  - host: matrix.cheatcodesam.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: synapse-service
            port:
              number: 8008
  - host: www.cheatcodesam.com
    http:
      paths:
      - path: /interview
        pathType: Prefix
        backend:
          service:
            name: httpecho-svc
            port:
                number: 5678
